# fhir-omop

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
db/init/: 01_omop_cdm_v54.sql  02_enterprise_app_tables.sql  03_enterprise_tenant.sql  04_enterprise_auth.sql  05_enterprise_audit.sql  06_enterprise_classification.sql  07_enterprise_encryption.sql  08_enterprise_consent.sql
docs/: enterprise.md  one-pager.md
frontend/: index.html
frontend/css/: app.css
frontend/js/: main.js
frontend/js/core/: api.js  auth.js  router.js  utils.js
frontend/js/pages/: audit.js  consent.js  dashboard.js  login.js  mappings.js  pipelines.js  sources.js  target-records.js  tenants.js  users.js
scripts/: demo-local.sh  demo.py
src/application/commands/: authenticate_user.py  create_mapping.py  create_source_connection.py  execute_pipeline.py  manage_users.py  verify_source_connection.py
src/application/dtos/: auth_dtos.py  mapping_dtos.py  (+2 more)
tests/application/: test_create_mapping.py  test_create_source_connection.py  test_execute_pipeline.py
tests/domain/: test_audit_entry.py  test_classification.py  test_consent.py  test_mapping_config.py  test_nphies.py  test_pipeline.py  test_residency.py  test_source_connection.py  test_tenant.py  test_user.py
tests/infrastructure/: test_audit_middleware.py  test_encryption.py  test_jwt_token_service.py  test_postgresql_repos.py  test_repositories.py  test_security.py  test_templates.py  test_tenant_middleware.py  test_whistle_engine.py
tests/integration/: test_api.py
(+71 files in other folders)
